@@ -1,5 +1,10 @@
 2002-08-13  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* include/commdlg.h: Don't include COM headers or use
+	COM-dependent symbols if __OBJC__.
+
+2002-08-13  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* include/wincrypt.h (CryptDuplicateHash, CryptDuplicateKey):
 	Add prototypes.
 
